--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_F0F5FA"
+    android:background="@color/color_181922_FFFFFF"
     android:orientation="vertical"
     tools:context=".ui.profileCenter.profile.ProfileActivity">
 
@@ -15,7 +15,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/margin_0.5"
         android:background="@color/color_F0F5FA" />
 
     <ScrollView
@@ -128,7 +128,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:src="@drawable/icon_arrow07" />
 
                     <androidx.legacy.widget.Space
                         android:layout_width="10dp"
@@ -138,7 +138,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/margin_0.5"
                     android:layout_marginStart="14dp"
                     android:background="@color/color_F0F5FA" />
 
@@ -177,7 +177,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:src="@drawable/icon_arrow07" />
 
                 </LinearLayout>
 
@@ -221,7 +221,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/margin_0.5"
                     android:layout_marginStart="14dp"
                     android:background="@color/color_F0F5FA" />
 
@@ -258,7 +258,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/margin_0.5"
                     android:layout_marginStart="14dp"
                     android:background="@color/color_F0F5FA" />
 
@@ -299,7 +299,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:src="@drawable/icon_arrow07" />
 
                     <androidx.legacy.widget.Space
                         android:layout_width="10dp"
@@ -348,7 +348,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:src="@drawable/icon_arrow07" />
 
                     <androidx.legacy.widget.Space
                         android:layout_width="10dp"
@@ -357,7 +357,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/margin_0.5"
                     android:layout_marginStart="14dp"
                     android:background="@color/color_F0F5FA" />
 
@@ -399,7 +399,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:src="@drawable/icon_arrow07" />
 
                     <androidx.legacy.widget.Space
                         android:layout_width="10dp"
@@ -408,7 +408,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/margin_0.5"
                     android:layout_marginStart="14dp"
                     android:background="@color/color_F0F5FA" />
 
@@ -450,7 +450,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:src="@drawable/icon_arrow07" />
 
                     <androidx.legacy.widget.Space
                         android:layout_width="10dp"
@@ -459,7 +459,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/margin_0.5"
                     android:layout_marginStart="14dp"
                     android:background="@color/color_F0F5FA" />
 
@@ -501,7 +501,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:src="@drawable/icon_arrow07" />
 
                     <androidx.legacy.widget.Space
                         android:layout_width="10dp"
@@ -549,7 +549,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:src="@drawable/icon_arrow07" />
 
                     <androidx.legacy.widget.Space
                         android:layout_width="10dp"
@@ -559,7 +559,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/margin_0.5"
                     android:layout_marginStart="14dp"
                     android:background="@color/color_F0F5FA" />
                 <LinearLayout
@@ -587,7 +587,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:src="@drawable/icon_arrow07" />
 
                 </LinearLayout>
             </LinearLayout>
