--- a/app/src/main/res/layout/item_sport_favorite.xml
+++ b/app/src/main/res/layout/item_sport_favorite.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_1"
     android:background="@drawable/bg_gray_stoke_radius_8"
+    app:cardElevation="0dp"
     app:cardBackgroundColor="@color/color_bbbbbb_ffffff"
     app:cardCornerRadius="8dp">
 
@@ -68,7 +69,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="4"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -507,7 +508,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="5"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -578,7 +579,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="4"
                 android:gravity="start">
 
                 <TextView
@@ -595,7 +596,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="5"
                 android:gravity="center">
 
                 <org.cxct.sportlottery.widget.HIndicator
