--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -24,7 +24,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="4"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -481,7 +481,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="5"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -498,6 +498,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                        app:autoSizeMinTextSize="@dimen/textSize8sp"
                         android:gravity="center"
                         android:singleLine="true"
                         android:ellipsize="end"
@@ -510,6 +512,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                        app:autoSizeMinTextSize="@dimen/textSize8sp"
                         android:gravity="center"
                         android:singleLine="true"
                         android:ellipsize="end"
@@ -522,6 +526,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                        app:autoSizeMinTextSize="@dimen/textSize8sp"
                         android:gravity="center"
                         android:singleLine="true"
                         android:ellipsize="end"
@@ -555,7 +561,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="4"
                 android:gravity="start">
 
                 <TextView
@@ -572,7 +578,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="5"
                 android:gravity="center">
 
                 <org.cxct.sportlottery.widget.HIndicator
